--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
 <h1>Embebidos</h1>
 <img src="/static/images/iot.png" alt="user">
 <h1>Sensor:</h1><h1 id="sensor">--</h1>
-<button id = 'LED1On'type="button" onclick="LED1_On();">
+<button id = 'LED1On'type="button" onclick="3000();">
 LED1 ON!</button>
-<button id = 'LED1Off' type="button" onclick="LED1_Off();">
+<button id = 'LED1Off' type="button" onclick="5000();">
 LED1_OFF!</button>
 
 <script>
