--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,12 @@
 
 <h1>Embebidos</h1>
 <img src="/static/images/iot.png" alt="user">
+
 <h1>Sensor:</h1><h1 id="sensor">--</h1>
 <h1>Sensor1:</h1><h1 id="sensor1">--</h1>
+
+
+
 <button id = 'LED1On'type="button" onclick="LED1_On();">
 LED1 ON!</button>
 <button id = 'LED1Off' type="button" onclick="LED1_Off();">
@@ -19,13 +23,13 @@ LED1_OFF!</button>
 <script>
 /*
 function LED1_On() {
-	alert("led on");
+	alert("Suma");
 	console.log("led on");
   
 }
 function LED1_Off(){
 	alert("led off");
-	console.log("led off");
+	console.log("Resta");
 }
 */
 </script>
