--- a/templates/index.html
+++ b/templates/index.html
@@ -24,12 +24,12 @@ LED1_OFF!</button>
 /*
 function LED1_On() {
 	alert("Suma");
-	console.log("led on");
+	console.log("Suma1");
   
 }
 function LED1_Off(){
-	alert("led off");
-	console.log("Resta");
+	alert("Resta");
+	console.log("Resta1");
 }
 */
 </script>
