--- a/templates/index.html
+++ b/templates/index.html
@@ -16,22 +16,12 @@
 
 
 <button id = 'LED1On'type="button" onclick="LED1_On();">
-LED1 ON!</button>
+Suma!</button>
 <button id = 'LED1Off' type="button" onclick="LED1_Off();">
-LED1_OFF!</button>
+Resta!</button>
 
 <script>
-/*
-function LED1_On() {
-	alert("Suma");
-	console.log("Suma1");
-  
-}
-function LED1_Off(){
-	alert("Resta");
-	console.log("Resta1");
-}
-*/
+
 </script>
 </body>
 </html>
