--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
 <img src="/static/images/iot.png" alt="user">
 <h1>5000</h1>
 <h1>3000</h1>
-
+<h1>Sensor:</h1><h1 id="sensor">--</h1>
+<h1>Sensor1:</h1><h1 id="sensor1">--</h1>
 
 
 
