--- a/templates/index.html
+++ b/templates/index.html
@@ -9,15 +9,16 @@
 
 <h1>Embebidos</h1>
 <img src="/static/images/iot.png" alt="user">
-<h1>5000</h1>
-<h1>3000</h1>
+
+<h1>Sensor:</h1><h1 id="sensor">--</h1>
+<h1>Sensor1:</h1><h1 id="sensor1">--</h1>
 
 
 
 <button id = 'LED1On'type="button" onclick="LED1_On();">
-Suma!</button>
+Led on!</button>
 <button id = 'LED1Off' type="button" onclick="LED1_Off();">
-Resta!</button>
+Led off!</button>
 
 <script>
 
