--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
 <h1>Embebidos</h1>
 <img src="/static/images/iot.png" alt="user">
 
-<h1>Sensor:</h1><h1 id="sensor">--</h1>
-<h1>Sensor1:</h1><h1 id="sensor1">--</h1>
+<h1>Hora:</h1><h1 id="sensor">--</h1>
+<h1>Minuto:</h1><h1 id="sensor1">--</h1>
 
 
 
