--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
 
 <h1>Hora:</h1><h1 id="sensor">--</h1>
 <h1>Minuto:</h1><h1 id="sensor1">--</h1>
+<h1>Segundo:</h1><h1 id="sensor2">--</h1>
 
 
 
