--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,15 @@
 <h1>Embebidos</h1>
 <img src="/static/images/iot.png" alt="user">
 
-<h1>Hora:</h1><h1 id="sensor">--</h1>
-<h1>Minuto:</h1><h1 id="sensor1">--</h1>
-<h1>Segundo:</h1><h1 id="sensor2">--</h1>
+<h1>Sensor:</h1><h1 id="sensor">--</h1>
+<h1>Sensor1:</h1><h1 id="sensor1">--</h1>
 
 
+
+<button id = 'LED1On'type="button" onclick="LED1_On();">
+Led on!</button>
+<button id = 'LED1Off' type="button" onclick="LED1_Off();">
+Led off!</button>
 
 <script>
 
