--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,26 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 <script src="/static/js/index.js"></script>
 <title>EMBEBIDOS</title>
-</head>
+</head> 
 <body>
 
 <h1>Embebidos</h1>
 <img id="imagen" src="/static/images/iot.png" alt="user">
-<h1>Sensor:</h><h id="sensor">--</h1>
-<button id = 'LED1On'type="button" onclick="LED1_On();">
-LED1 ON!</button>
-<button id = 'LED1Off' type="button" onclick="LED1_Off();">
-LED1_OFF!</button>
+<h1>Sensor1:</h><h id="sensor">--</h1>
+<h1>Sensor2:</h><h id="sensor1">--</h1>
+<h5>Historial1:</h><h id="sensor2">--</h5>
+<button id = 'Historial1' type="button" onclick="Historial();">
+Historial1</button>
+<h5>Historial2:</h><h id="sensor3">--</h5>
+
+
+<button id = 'Historial2' type="button" onclick="Historial1();">
+Historial1</button>
 
 <script>
 /*
@@ -29,4 +36,5 @@ function LED1_Off(){
 */
 </script>
 </body>
+</html>
 </html>
