--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
 
 
-<h5>Historial1:</h><h id="sensor2">--</h5>
+<h5>Historial:</h><h id="sensor2">--</h5>
 <button id = 'Historial1' type="button" onclick="Historial();">
 Historial1</button>
 <button id = 'Historial2' type="button" onclick="Historial1();">
